--- a/package.json
+++ b/package.json
@@ -69,6 +69,12 @@
       "**/*.(t|j)s"
     ],
     "coverageDirectory": "../coverage",
-    "testEnvironment": "node"
+    "testEnvironment": "node",
+    "moduleNameMapper": {
+      "@/(.*)": "<rootDir>/$1"
+    },
+    "modulePaths": [
+      "<rootDir>/src"
+    ]
   }
 }
